--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Repo
+      uses: actions/checkout@v4
+    
     - name: Setup Node.js 20.x
       uses: actions/setup-node@v4
       with:
-        node-version: 20.x
-        cache: 'npm'
-    - run: npm ci
-    - run: npm test
+        node-version: 20.x 
+
+    - name: npm install
+      run: |
+          export TZ="Asia/Tokyo"
+          npm install
+          ls -la
+
+    - name: Build Next.js
+      run: |
+          npm run build
+          ls -la
+    
+
+    
